--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -11,12 +11,12 @@ name: OpenWrt-CI 测试版
 
 on:
   push:
-    branches: 
-      - master
-    schedule:
-      - cron: 0 20 * * *
-    release:
-      types: [published]
+    #branches: 
+      #- master
+    #schedule:
+      #- cron: 0 20 * * *
+    #release:
+      #types: [published]
 
 jobs:
   build:
